--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "dotenv": "^10.0.0",
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
+        "joi": "^17.4.1",
+        "mongoose": "^5.13.2",
         "morgan": "~1.9.1"
     }
 }
