Added Register Action

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "dotenv": "^10.0.0",
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "joi": "^17.4.1",
+        "moleculer": "^0.14.15",
         "mongoose": "^5.13.2",
         "morgan": "~1.9.1"
     }
