--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "debug": "~2.6.9",
         "dotenv": "^10.0.0",
         "express": "~4.16.1",
