--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "joi": "^17.4.1",
+        "lodash": "^4.17.21",
         "moleculer": "^0.14.15",
         "mongoose": "^5.13.2",
         "morgan": "~1.9.1"
